--- a/package.json
+++ b/package.json
@@ -1,18 +1,40 @@
 {
   "name": "effiagro",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-google-signin/google-signin": "^10.0.1",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
+    "@react-navigation/stack": "^6.3.18",
     "expo": "~49.0.13",
+    "expo-apple-authentication": "~6.1.0",
+    "expo-auth-session": "~5.0.2",
+    "expo-dev-client": "^2.4.11",
+    "expo-font": "~11.4.0",
+    "expo-random": "~13.2.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.16",
+    "expo-web-browser": "~12.3.2",
+    "firebase": "^8.8.1",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.5",
+    "react-native-fbsdk-next": "^12.1.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-svg": "13.9.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
